Link Foundation framework on iOS

--- a/Samples/Lightmapping/CMakeLists.txt
+++ b/Samples/Lightmapping/CMakeLists.txt
@@ -292,6 +292,7 @@ elseif (BUILD_IOS)
 	set_target_properties(SampleLightmapping PROPERTIES XCODE_EMBED_FRAMEWORKS "${framework_files}")
 
 	# link framework
+	target_link_libraries(SampleLightmapping "-framework Foundation")
 	target_link_libraries(SampleLightmapping "-framework UIKit")
 	target_link_libraries(SampleLightmapping "-framework CoreGraphics")
 	target_link_libraries(SampleLightmapping "-framework Metal")
