--- a/Samples/Materials/CMakeLists.txt
+++ b/Samples/Materials/CMakeLists.txt
@@ -287,6 +287,7 @@ elseif (BUILD_IOS)
 	set_target_properties(SampleMaterials PROPERTIES XCODE_EMBED_FRAMEWORKS "${framework_files}")
 
 	# link framework
+	target_link_libraries(SampleMaterials "-framework Foundation")
 	target_link_libraries(SampleMaterials "-framework UIKit")
 	target_link_libraries(SampleMaterials "-framework CoreGraphics")
 	target_link_libraries(SampleMaterials "-framework Metal")
