--- a/Samples/Noise2D/CMakeLists.txt
+++ b/Samples/Noise2D/CMakeLists.txt
@@ -287,6 +287,7 @@ elseif (BUILD_IOS)
 	set_target_properties(SampleNoise2D PROPERTIES XCODE_EMBED_FRAMEWORKS "${framework_files}")
 
 	# link framework
+	target_link_libraries(SampleNoise2D "-framework Foundation")
 	target_link_libraries(SampleNoise2D "-framework UIKit")
 	target_link_libraries(SampleNoise2D "-framework CoreGraphics")
 	target_link_libraries(SampleNoise2D "-framework Metal")
