--- a/Samples/Particles/CMakeLists.txt
+++ b/Samples/Particles/CMakeLists.txt
@@ -288,6 +288,7 @@ elseif (BUILD_IOS)
 	set_target_properties(SampleParticles PROPERTIES XCODE_EMBED_FRAMEWORKS "${framework_files}")
 
 	# link framework
+	target_link_libraries(SampleParticles "-framework Foundation")
 	target_link_libraries(SampleParticles "-framework UIKit")
 	target_link_libraries(SampleParticles "-framework CoreGraphics")
 	target_link_libraries(SampleParticles "-framework Metal")
