--- a/Samples/ParticlesVortex/CMakeLists.txt
+++ b/Samples/ParticlesVortex/CMakeLists.txt
@@ -287,6 +287,7 @@ elseif (BUILD_IOS)
 	set_target_properties(SampleParticlesVortex PROPERTIES XCODE_EMBED_FRAMEWORKS "${framework_files}")
 
 	# link framework
+	target_link_libraries(SampleParticlesVortex "-framework Foundation")
 	target_link_libraries(SampleParticlesVortex "-framework UIKit")
 	target_link_libraries(SampleParticlesVortex "-framework CoreGraphics")
 	target_link_libraries(SampleParticlesVortex "-framework Metal")
