--- a/Scripts/CMakeLists.txt
+++ b/Scripts/CMakeLists.txt
@@ -289,6 +289,7 @@ elseif (BUILD_IOS)
 	set_target_properties(@project_name@ PROPERTIES XCODE_EMBED_FRAMEWORKS "${framework_files}")
 
 	# link framework
+	target_link_libraries(@project_name@ "-framework Foundation")
 	target_link_libraries(@project_name@ "-framework UIKit")
 	target_link_libraries(@project_name@ "-framework CoreGraphics")
 	target_link_libraries(@project_name@ "-framework Metal")
