--- a/Projects/Bullet3/CMakeLists.txt
+++ b/Projects/Bullet3/CMakeLists.txt
@@ -2,6 +2,8 @@ FILE (STRINGS "VERSION" BULLET_VERSION)
 
 set (BULLET_PHYSICS_SOURCE_DIR ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Bullet3)
 
+set(INCLUDE_INSTALL_DIR ${SKYLICHT_ENGINE_SOURCE_DIR}/Install/include/Bullet3)
+
 OPTION(BUILD_SHARED_LIBS "Use shared libraries" OFF)
 
 OPTION(USE_SOFT_BODY_MULTI_BODY_DYNAMICS_WORLD "Use btSoftMultiBodyDynamicsWorld" ON)
