Update cmake install header files

--- a/Projects/Irrlicht/CMakeLists.txt
+++ b/Projects/Irrlicht/CMakeLists.txt
@@ -88,4 +88,8 @@ install(TARGETS Irrlicht
 			RUNTIME DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}
 			LIBRARY DESTINATION lib
 			ARCHIVE DESTINATION lib)
+
+install (DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Irrlicht/Include
+	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Irrlicht
+	FILES_MATCHING PATTERN "*.h*")
 endif()
