--- a/Projects/Skylicht/Audio/CMakeLists.txt
+++ b/Projects/Skylicht/Audio/CMakeLists.txt
@@ -48,4 +48,8 @@ install(TARGETS Audio
 			RUNTIME DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}
 			LIBRARY DESTINATION lib
 			ARCHIVE DESTINATION lib)
+
+install (DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Audio/Source
+	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Audio
+	FILES_MATCHING PATTERN "*.h*")
 endif()
