--- a/Projects/Skylicht/Components/CMakeLists.txt
+++ b/Projects/Skylicht/Components/CMakeLists.txt
@@ -36,4 +36,8 @@ install(TARGETS Components
 			RUNTIME DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}
 			LIBRARY DESTINATION lib
 			ARCHIVE DESTINATION lib)
+
+install (DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Components/Source
+	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Components
+	FILES_MATCHING PATTERN "*.h*")
 endif()
