--- a/Projects/Skylicht/Crypto/CMakeLists.txt
+++ b/Projects/Skylicht/Crypto/CMakeLists.txt
@@ -18,4 +18,8 @@ install(TARGETS CryptoLib
 			RUNTIME DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}
 			LIBRARY DESTINATION lib
 			ARCHIVE DESTINATION lib)
+			
+install (DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Crypto/Source
+	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Crypto
+	FILES_MATCHING PATTERN "*.h*")
 endif()
