--- a/Projects/Skylicht/Network/CMakeLists.txt
+++ b/Projects/Skylicht/Network/CMakeLists.txt
@@ -35,4 +35,8 @@ install(TARGETS Network
 			RUNTIME DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}
 			LIBRARY DESTINATION lib
 			ARCHIVE DESTINATION lib)
+
+install (DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Network/Source
+	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Network
+	FILES_MATCHING PATTERN "*.h*")
 endif()
