--- a/Projects/Skylicht/Physics/CMakeLists.txt
+++ b/Projects/Skylicht/Physics/CMakeLists.txt
@@ -44,4 +44,8 @@ install(TARGETS Physics
 			RUNTIME DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}
 			LIBRARY DESTINATION lib
 			ARCHIVE DESTINATION lib)
+
+install (DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Physics/Source
+	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Physics
+	FILES_MATCHING PATTERN "*.h*")
 endif()
