--- a/Projects/Skylicht/UserInterface/CMakeLists.txt
+++ b/Projects/Skylicht/UserInterface/CMakeLists.txt
@@ -28,4 +28,8 @@ install(TARGETS UserInterface
 			RUNTIME DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}
 			LIBRARY DESTINATION lib
 			ARCHIVE DESTINATION lib)
+
+install (DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/UserInterface/Source
+	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/UserInterface
+	FILES_MATCHING PATTERN "*.h*")
 endif()
