--- a/Projects/Skylicht/Client/CMakeLists.txt
+++ b/Projects/Skylicht/Client/CMakeLists.txt
@@ -48,4 +48,8 @@ install(TARGETS Client
 			RUNTIME DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}
 			LIBRARY DESTINATION lib
 			ARCHIVE DESTINATION lib)
+			
+install (DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Client/Source
+	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Client
+	FILES_MATCHING PATTERN "*.h*")
 endif()
