--- a/Projects/Skylicht/Collision/CMakeLists.txt
+++ b/Projects/Skylicht/Collision/CMakeLists.txt
@@ -36,4 +36,8 @@ install(TARGETS Collision
 			RUNTIME DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}
 			LIBRARY DESTINATION lib
 			ARCHIVE DESTINATION lib)
+
+install (DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Collision/Source
+	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Collision
+	FILES_MATCHING PATTERN "*.h*")
 endif()
