--- a/Projects/Skylicht/Lightmapper/CMakeLists.txt
+++ b/Projects/Skylicht/Lightmapper/CMakeLists.txt
@@ -26,4 +26,8 @@ install(TARGETS Lightmapper
 			RUNTIME DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}
 			LIBRARY DESTINATION lib
 			ARCHIVE DESTINATION lib)
+			
+install (DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/Lightmapper/Source
+	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/Lightmapper
+	FILES_MATCHING PATTERN "*.h*")
 endif()
