--- a/Projects/Skylicht/System/CMakeLists.txt
+++ b/Projects/Skylicht/System/CMakeLists.txt
@@ -25,4 +25,8 @@ install(TARGETS System
 			RUNTIME DESTINATION ${SKYLICHT_LIBRARY_INSTALL_DIR}
 			LIBRARY DESTINATION lib
 			ARCHIVE DESTINATION lib)
+
+install (DIRECTORY ${SKYLICHT_ENGINE_SOURCE_DIR}/Projects/Skylicht/System/Source
+	DESTINATION ${SKYLICHT_INCLUDE_INSTALL_DIR}/System
+	FILES_MATCHING PATTERN "*.h*")
 endif()
