Fix build error on irrlicht library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -166,6 +166,15 @@ endif()
 # freetype font library
 add_definitions(-DFT2_BUILD_LIBRARY)
 
+# irrlicht shared/static
+if (BUILD_SHARED_LIBS)
+if (INSTALL_LIBS)
+	add_definitions(-DIRRLICHT_EXPORTS)
+endif()
+else()
+	add_definitions(-D_IRR_STATIC_LIB_)
+endif()
+
 # skylicht debug leak memory
 if (BUILD_DEBUG_VLD AND MSVC)
 	add_definitions(-DUSE_VISUAL_LEAK_DETECTOR)
